Reboot Notification Fix Updated MPLoginAgent, new minimal view Added Patch Staging for quicker patching

--- a/Source/MacPatch/MPLoginAgent/MPLoginAgent/MinScanAndPatchVC.xib
+++ b/Source/MacPatch/MPLoginAgent/MPLoginAgent/MinScanAndPatchVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G23a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G24b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
@@ -8,6 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MinScanAndPatchVC">
             <connections>
+                <outlet property="cancelButton" destination="prM-qr-zkG" id="FOv-oO-4uO"/>
                 <outlet property="installStatusText" destination="uxr-p1-qqR" id="ETf-T8-aBX"/>
                 <outlet property="logoImageView" destination="7Xs-Hj-WSv" id="7qW-pM-nAc"/>
                 <outlet property="progressBar" destination="FdP-UO-5gn" id="Iv8-RN-dXu"/>
@@ -75,7 +76,7 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="prM-qr-zkG">
+                        <button hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="prM-qr-zkG">
                             <rect key="frame" x="199" y="11" width="82" height="32"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="se5-cO-JEy">
