--- a/Source/MacPatch/Self Patch/Self Patch/SelfPatchMainMenu.xib
+++ b/Source/MacPatch/Self Patch/Self Patch/SelfPatchMainMenu.xib
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9531" systemVersion="15E33e" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment version="1070" identifier="macosx"/>
-        <development version="6300" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9531"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12121"/>
+        <capability name="box content view" minToolsVersion="7.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -272,7 +273,7 @@
                         <rect key="frame" x="0.0" y="348" width="715" height="74"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     </customView>
-                    <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="caM-nC-p6Z">
+                    <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="caM-nC-p6Z">
                         <rect key="frame" x="445" y="115" width="227" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Allow Reboot Patch Installs Enabled" id="2T0-Pk-nhn">
@@ -286,7 +287,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Warning" id="4pX-Z4-ufW"/>
                     </imageView>
-                    <textField verticalHuggingPriority="750" id="538">
+                    <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="538">
                         <rect key="frame" x="10" y="5" width="441" height="11"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Note:  Once patching has been started, patches that require a reboot will be installed on logout." id="558">
@@ -295,7 +296,7 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField wantsLayer="YES" verticalHuggingPriority="750" id="541">
+                    <textField wantsLayer="YES" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="541">
                         <rect key="frame" x="66" y="357" width="159" height="34"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <shadow key="shadow">
@@ -317,11 +318,11 @@
                         <rect key="frame" x="-1" y="143" width="717" height="206"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="rYa-su-DbZ">
-                            <rect key="frame" x="1" y="17" width="715" height="188"/>
+                            <rect key="frame" x="1" y="0.0" width="715" height="205"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="18" headerView="559" id="560">
-                                    <rect key="frame" x="0.0" y="0.0" width="715" height="20"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="715" height="188"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -481,7 +482,6 @@
                                     </connections>
                                 </tableView>
                             </subviews>
-                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="0.02517482517482518" horizontal="YES" id="561">
                             <rect key="frame" x="1" y="173" width="715" height="15"/>
@@ -499,7 +499,7 @@
                     <box autoresizesSubviews="NO" borderType="line" id="539">
                         <rect key="frame" x="10" y="16" width="695" height="62"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
-                        <view key="contentView">
+                        <view key="contentView" id="4EV-2d-Ozu">
                             <rect key="frame" x="1" y="1" width="693" height="46"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
@@ -536,7 +536,7 @@
                                         <action selector="stopAndCloseSelfPatch:" target="494" id="590"/>
                                     </connections>
                                 </button>
-                                <textField verticalHuggingPriority="750" id="612">
+                                <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="612">
                                     <rect key="frame" x="15" y="14" width="86" height="17"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Patch Group:" id="613">
@@ -545,7 +545,7 @@
                                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
                                 </textField>
-                                <textField verticalHuggingPriority="750" id="614">
+                                <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="614">
                                     <rect key="frame" x="103" y="14" width="218" height="17"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" placeholderString="RecommendedPatches" id="615">
@@ -556,17 +556,15 @@
                                 </textField>
                             </subviews>
                         </view>
-                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </box>
-                    <box autoresizesSubviews="NO" title="Status" borderType="line" id="O4q-qS-0ar">
+                    <box autoresizesSubviews="NO" borderType="line" title="Status" id="O4q-qS-0ar">
                         <rect key="frame" x="10" y="69" width="695" height="59"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                        <view key="contentView">
+                        <view key="contentView" id="IJ2-MQ-GIO">
                             <rect key="frame" x="1" y="1" width="693" height="43"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textField verticalHuggingPriority="750" id="546">
+                                <textField verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" id="546">
                                     <rect key="frame" x="35" y="15" width="647" height="17"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textFieldCell key="cell" lineBreakMode="truncatingMiddle" sendsActionOnEndEditing="YES" placeholderString="Press the scan button to begin a scan." id="547">
@@ -581,12 +579,10 @@
                                 </progressIndicator>
                             </subviews>
                         </view>
-                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </box>
                 </subviews>
             </view>
-            <point key="canvasLocation" x="331.5" y="292.5"/>
+            <point key="canvasLocation" x="-478" y="-208"/>
         </window>
         <arrayController selectsInsertedObjects="NO" id="576">
             <declaredKeys>
