Fix many ui issues with new console

--- a/Server/apps/mpconsole/templates/patches/custom_patch_wizard copy.html
+++ b/Server/apps/mpconsole/templates/patches/custom_patch_wizard copy.html
@@ -144,7 +144,7 @@
     <div id="step-2">
         <div id="wrapper">
             <div style="float:left;" id="1"><h4>Patch Criteria</h4></div>
-            <div style="float:right;" id="2"><a onClick="showHelp();"><img src="{{ url_for('static', filename='images/help.png') }}" /></a></div>
+            <div style="float:right;" id="2"><a onClick="showHelp();"><img src="{{ url_for('static', filename='img/help.png') }}" /></a></div>
             <div style="clear:both"></div>
         </div>
 
