--- a/Server/apps/mpconsole/templates/software/software_package_modify.html
+++ b/Server/apps/mpconsole/templates/software/software_package_modify.html
@@ -119,7 +119,7 @@
 							<div style="font-size:12px;padding:10px;">
 								{% if data['PKG'].sw_url %}
 								<a href="/mp-content/{{data['PKG'].sw_url}}">
-									<img src="{{ url_for('static', filename='images/arrow_down.png') }}" height="14" />{{ data['PKG'].sw_url.split("/") | last }} ({{data['PKG'].sw_hash }})
+									<img src="{{ url_for('static', filename='img/arrow_down.png') }}" height="14" />{{ data['PKG'].sw_url.split("/") | last }} ({{data['PKG'].sw_hash }})
 								</a>
 								{% endif %}
 							</div>
@@ -253,7 +253,7 @@
 					<label>Pre-Requisite Package(s)</label>
 					<h4>
 						<a href="#" onClick="addFormField('preSWPKG','preid','divTxtPre'); return false;">
-							<img src="{{ url_for('static', filename='images/pkg_add.png') }}" />Add
+							<img src="{{ url_for('static', filename='img/pkg_add.png') }}" />Add
 						</a>
 					</h4>
 
@@ -283,7 +283,7 @@
 					<label>Post-Requisite Package(s)</label>
 					<h4>
 						<a href="#" onClick="addFormField('postSWPKG','postid','divTxtPost'); return false;">
-							<img src="{{ url_for('static', filename='images/pkg_add.png') }}" />Add
+							<img src="{{ url_for('static', filename='img/pkg_add.png') }}" />Add
 						</a>
 					</h4>
 
